Fixes double scrollbar in LTI

--- a/packages/core/scss/global/objects/objects.content.scss
+++ b/packages/core/scss/global/objects/objects.content.scss
@@ -2,6 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   &--background {
     background-color: $brand-grey--lightest;
